[TV] - :wedding: fix css alignment

--- a/css/app.css
+++ b/css/app.css
@@ -22,3 +22,7 @@ div.show-widget {
   margin-bottom: 5px;
   border-color: #999;
 }
+
+div.elo {
+  border: red solid 3px;
+}
